--- a/index.html
+++ b/index.html
@@ -4,77 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de desenvolvimento</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="./css/styles.css" media="screen"/>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&family=Nunito+Sans:opsz,wght@6..12,500&display=swap"
+        rel="stylesheet">
+    <title>Lista de tarefas</title>
 </head>
 
 <body>
-    <div class="box-principal" id="home" >
-        <nav>
-            <h2 class="Portfolio">Port<span>folio</span></h2>
-            <ul>
-                <li><a class="link-menu" href="#home">Home</a></li>
-                <li><a class="link-menu"  href="#sobre">Sobre</a></li>
-                <li><a class="link-menu"  href="#projetos-id">Projetos</a></li>
-                <li><a class="link-menu"  href="#fale-conosco">Fale conosco</a></li>
-            </ul>
-        </nav>
-        <div class="meu-nome" id="sobre">
-            <h1>Kélia <span>Amaral</span></h1>
-            <h3>Analista/Desenvolvedora</h3>
-        </div>
+    <div class="container">
+        <input class="input-task" placeholder="O que devo fazer ...">
+        <button class="add-task">Adicionar</button>
+        <ul class="list-task">
+            
+
+        </ul>
     </div>
-    <section>
-        <img src="./img/kelia.png">
-        <div>
-            <h2>Sobre mim</h2>
-            <p>Sou formada em ciências da computação desde 2019, trabalho com html, css e banco de dados oracle.
-                Estou estudando react,
-                node.js e javaScript e esse é o meu portfolio com algumas de minhas hablidades em programação.</p>
-            <button>Entre em contato</button>
-        </div>
-    </section>
-    <div class="projetos" id="projetos-id">
-        <h2>Projetos Principais</h2>
-
-        <div class="card-projetos">
-            <div class="card">
-                <img src="./img/html.png">
-                <h5>HTML</h5>
-                <p>Este são alguns projetos feitos em html e css</p>
-                <a href="https://www.youtube.com/" target="_blank">Ver projetos</a>
-
-            </div>
-            <div class="card">
-                <img src="./img/node.png">
-                <h5>NODE.JS</h5>
-                <p>Os projetos que estão neste card foram feitos em Node.JS</p>
-                <a href="https://www.youtube.com/" target="_blank">Ver projetos</a>
-
-            </div>
-            <div class="card">
-                <img src="./img/banco de dados.png">
-                <h5>BANCO DE DADOS</h5>
-                <p>Aqui estão alguns projetos, consultas e relatórios feitos utilizando a linguagen sql.</p>
-                <a href="https://www.youtube.com/" target="_blank">Ver projetos</a>
-
-            </div>
-        </div>
-        
-    </div>
-    <footer id="fale-conosco">
-        <h5> Kélia Amaral</h5>
-        <p>Para mais informações</p>
-        <div class="social">
-            <a href="https://www.linkedin.com/in/k%C3%A9lia-amaral/" target="_blank"><img src="./img/linkedin.png"></a>
-            <a href="tel:+5531987028301"><img src="./img/design sem nome.png"></a>
-        </div>
-    </footer>
 
 </body>
+<script src="script.js"></script>
 
 </html>
